updated panel when not configured

--- a/src/panel.html
+++ b/src/panel.html
@@ -10,14 +10,14 @@
 <body>
     <div id="root">
         <div class="config-container">
-            <div class="title">
-                Welcome to Mario Kart
+            <div class="header-image">
+                <img src="assets/images/config-header.png" alt="The Elite" />
             </div>
 
             <div class="description">
                 <div>
-                    This Panel shows the Non-Shortcut and Shortcut Ranks of the streamers Mario Kart 64 profile from
-                    <a href="https://www.mariokart64.com/" target="_blank">mariokart64.com</a>
+                    This Panel shows the GoldenEye 007 and/or Perfect Dark records for Nintendo 64 from the streamers profile from<br />
+                    <a href="https://www.the-elite.net/" target="_blank">the-elite.net</a>
                 </div>
                 <div>
                     But this panel is not configured yet
